# gEmbedded-OS

./: .gitignore  CMakeLists.txt  Makefile  toolchain.cmake
kernel/: CMakeLists.txt
kernel/config/: STM32F411.ld
kernel/core/: CMakeLists.txt
kernel/core/inc/: common.h  core.h  exception.h  memory.h  process.h  system.h  systemcall.h  time.h  vectors.h
kernel/core/include/: common.h  core.h  exception.h  memory.h  mode.h  process.h  system.h  time.h  vectors.h
kernel/core/src/: core.S  exception.c  memory.S  memory.c  mode.S  process.S  process.c  startup.S  system.S  system.c  systemcall.S  systemcall.c  test.c  time.c  vectors.S
kernel/driver/: CMakeLists.txt
kernel/driver/include/: gpio.h
kernel/userinterface/: CMakeLists.txt
kernel/userinterface/inc/: userinterface.h
kernel/userinterface/src/: dummy.c  userinterface.c
user/: CMakeLists.txt
user/src/: main.c  test.c
